create analysis & classification page

--- a/templates/analysisResultsPage.html
+++ b/templates/analysisResultsPage.html
@@ -1,10 +1,14 @@
 {% extends 'layout.html' %} {% block title %}
-<title>Hasil Preprocessing</title>
+<title>Hasil Analisis</title>
 {% endblock %} {% block content %}
 <div class="container mx-auto">
   <div>
-    <h1 class="text-[#3B3B3B] font-semibold text-2xl">Hasil Preprocessing</h1>
-    <p class="text-[#787F89] text-sm">Teks yang Siap untuk Analisis Sentimen</p>
+    <h1 class="text-[#3B3B3B] font-semibold text-2xl">
+      Hasil Analisis Klasifikasi
+    </h1>
+    <p class="text-[#787F89] text-sm">
+      Hasil Analisis Prediksi dari Model Klasifikasi
+    </p>
   </div>
   <div class="w-full p-5 mt-3 bg-white rounded-md shadow-md">
     <div class="flex justify-end">
@@ -53,15 +57,21 @@
                   </th>
                   <th
                     scope="col"
-                    class="px-3 py-2 text-base font-semibold text-gray-500 text-start"
+                    class="px-4 py-2 text-base font-semibold text-gray-500 text-start"
                   >
                     Komentar
                   </th>
                   <th
                     scope="col"
-                    class="px-4 py-2 text-base font-semibold text-gray-500 text-start"
+                    class="px-4 py-2 w-10 text-base font-semibold text-gray-500 text-start"
                   >
-                    Hasil Preprocessing
+                    Klasifikasi Manual
+                  </th>
+                  <th
+                    scope="col"
+                    class="px-4 py-2 w-10 text-base font-semibold text-gray-500 text-start"
+                  >
+                    Klasifikasi Sistem
                   </th>
                 </tr>
               </thead>
@@ -83,16 +93,11 @@
                       https://t.co/YTAe02BxcS
                     </div>
                   </td>
-                  <td
-                    class="max-w-md px-4 py-4 overflow-hidden text-sm text-gray-500"
-                  >
-                    <div class="comment-content">
-                      Ganjar Pranowo calon Presiden 2024 penerus Presiden Jokowi
-                      #GanjarPranowo #GanjarCapres #GanjarPresiden
-                      #GanjarMenangTotal #GanjarPilihanRakyat #Presiden2024
-                      #GanjarPresiden2024 #Pilpres2024 #Pemilu2024 #LapakGanjar
-                      https://t.co/YTAe02BxcS
-                    </div>
+                  <td class="px-4 py-4 text-sm text-gray-500 whitespace-nowrap">
+                    Positif
+                  </td>
+                  <td class="px-4 py-4 text-sm text-gray-500 whitespace-nowrap">
+                    Positif
                   </td>
                 </tr>
                 <tr>
@@ -111,16 +116,11 @@
                       hny itu hrpn Sy.
                     </div>
                   </td>
-                  <td
-                    class="max-w-md px-4 py-4 overflow-hidden text-sm text-gray-500"
-                  >
-                    <div class="comment-content">
-                      Ganjar Pranowo calon Presiden 2024 penerus Presiden Jokowi
-                      #GanjarPranowo #GanjarCapres #GanjarPresiden
-                      #GanjarMenangTotal #GanjarPilihanRakyat #Presiden2024
-                      #GanjarPresiden2024 #Pilpres2024 #Pemilu2024 #LapakGanjar
-                      https://t.co/YTAe02BxcS
-                    </div>
+                  <td class="px-4 py-4 text-sm text-gray-500 whitespace-nowrap">
+                    Positif
+                  </td>
+                  <td class="px-4 py-4 text-sm text-gray-500 whitespace-nowrap">
+                    Positif
                   </td>
                 </tr>
                 <tr>
@@ -139,16 +139,11 @@
                       #terusmajubersamaprabowo #pemilu2024
                     </div>
                   </td>
-                  <td
-                    class="max-w-md px-4 py-4 overflow-hidden text-sm text-gray-500"
-                  >
-                    <div class="comment-content">
-                      Ganjar Pranowo calon Presiden 2024 penerus Presiden Jokowi
-                      #GanjarPranowo #GanjarCapres #GanjarPresiden
-                      #GanjarMenangTotal #GanjarPilihanRakyat #Presiden2024
-                      #GanjarPresiden2024 #Pilpres2024 #Pemilu2024 #LapakGanjar
-                      https://t.co/YTAe02BxcS
-                    </div>
+                  <td class="px-4 py-4 text-sm text-gray-500 whitespace-nowrap">
+                    Positif
+                  </td>
+                  <td class="px-4 py-4 text-sm text-gray-500 whitespace-nowrap">
+                    Positif
                   </td>
                 </tr>
                 <tr>
@@ -166,16 +161,11 @@
                       demi suksesnya Pemilu tahun 2024," ucap Jokowi."
                     </div>
                   </td>
-                  <td
-                    class="max-w-md px-4 py-4 overflow-hidden text-sm text-gray-500"
-                  >
-                    <div class="comment-content">
-                      Ganjar Pranowo calon Presiden 2024 penerus Presiden Jokowi
-                      #GanjarPranowo #GanjarCapres #GanjarPresiden
-                      #GanjarMenangTotal #GanjarPilihanRakyat #Presiden2024
-                      #GanjarPresiden2024 #Pilpres2024 #Pemilu2024 #LapakGanjar
-                      https://t.co/YTAe02BxcS
-                    </div>
+                  <td class="px-4 py-4 text-sm text-gray-500 whitespace-nowrap">
+                    Positif
+                  </td>
+                  <td class="px-4 py-4 text-sm text-gray-500 whitespace-nowrap">
+                    Positif
                   </td>
                 </tr>
                 <tr>
@@ -195,16 +185,11 @@
                       Jokowi saja. https://t.co/kDmh4nwh7S
                     </div>
                   </td>
-                  <td
-                    class="max-w-md px-4 py-4 overflow-hidden text-sm text-gray-500"
-                  >
-                    <div class="comment-content">
-                      Ganjar Pranowo calon Presiden 2024 penerus Presiden Jokowi
-                      #GanjarPranowo #GanjarCapres #GanjarPresiden
-                      #GanjarMenangTotal #GanjarPilihanRakyat #Presiden2024
-                      #GanjarPresiden2024 #Pilpres2024 #Pemilu2024 #LapakGanjar
-                      https://t.co/YTAe02BxcS
-                    </div>
+                  <td class="px-4 py-4 text-sm text-gray-500 whitespace-nowrap">
+                    Positif
+                  </td>
+                  <td class="px-4 py-4 text-sm text-gray-500 whitespace-nowrap">
+                    Positif
                   </td>
                 </tr>
               </tbody>
@@ -255,7 +240,7 @@
                 <div class="inline-block hs-tooltip">
                   <button
                     type="button"
-                    class="hs-tooltip-toggle group min-h-[38px] min-w-[38px] flex justify-center items-center text-gray-400 hover:text-blue-600 p-2 text-sm rounded-lg focus:outline-none focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none"
+                    class="hs-tooltip-toggle group min-h-[38px] min-w-[38px] flex justify-center items-center text-gray-400 hover:text-blue-600 p-2 text-sm rounded-lg focus:outline-none focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none dark:text-gray-500 dark:hover:text-blue-500 dark:focus:bg-white/10"
                   >
                     <span class="text-xs text-gray-500 group-hover:hidden"
                       >•••</span
@@ -319,5 +304,274 @@
       </div>
     </div>
   </div>
+  <div class="w-full p-5 mt-5 bg-white rounded-md shadow-md">
+    <div
+      id="hs-pie-chart-classification"
+      class="flex justify-center items-center"
+    ></div>
+    <div class="flex justify-center items-center gap-x-4 mt-1 sm:mt-6">
+      <div class="inline-flex items-center">
+        <span class="w-16 h-6 inline-block bg-[#5842BE] rounded-sm me-2"></span>
+        <span class="text-[13px] text-[#3B3B3B]"> Positif </span>
+      </div>
+      <div class="inline-flex items-center">
+        <span class="w-16 h-6 inline-block bg-[#8F77FF] rounded-sm me-2"></span>
+        <span class="text-[13px] text-[#3B3B3B]"> Negatif </span>
+      </div>
+    </div>
+    <h1 class="text-[#3B3B3B] mt-10 font-semibold text-lg">
+      Hasil Total Data Klasifikasi Sentimen
+    </h1>
+    <div class="mt-5">
+      <p class="text-sm font-medium text-[#3B3B3B] mb-2">
+        Positif : <span>543</span> Data
+      </p>
+      <div
+        class="flex w-full h-4 bg-gray-300 rounded-full overflow-hidden"
+        role="progressbar"
+        aria-valuenow="25"
+        aria-valuemin="0"
+        aria-valuemax="100"
+      >
+        <div
+          class="flex flex-col justify-center overflow-hidden bg-[#5842BE] text-xs text-white text-center whitespace-nowrap transition duration-500"
+          style="width: 65%"
+        ></div>
+      </div>
+    </div>
+    <div class="mt-5">
+      <p class="text-sm font-medium text-[#3B3B3B] mb-2">
+        Negatif : <span>275</span> Data
+      </p>
+      <div
+        class="flex w-full h-4 bg-gray-300 rounded-full overflow-hidden"
+        role="progressbar"
+        aria-valuenow="25"
+        aria-valuemin="0"
+        aria-valuemax="100"
+      >
+        <div
+          class="flex flex-col justify-center overflow-hidden bg-[#8F77FF] text-xs text-white text-center whitespace-nowrap transition duration-500"
+          style="width: 35%"
+        ></div>
+      </div>
+    </div>
+  </div>
+  <div class="w-full p-5 mt-5 bg-white rounded-md shadow-md">
+    <h1 class="text-[#3B3B3B] font-semibold text-lg mb-3">Akurasi Model SVM</h1>
+    <div id="hs-pie-chart-model" class="flex justify-center items-center"></div>
+    <div class="flex justify-center items-center gap-x-4 mt-1 sm:mt-6">
+      <div class="inline-flex items-center">
+        <span class="w-16 h-6 inline-block bg-[#5842BE] rounded-sm me-2"></span>
+        <span class="text-[13px] text-[#3B3B3B]"> Sesuai </span>
+      </div>
+      <div class="inline-flex items-center">
+        <span class="w-16 h-6 inline-block bg-[#8F77FF] rounded-sm me-2"></span>
+        <span class="text-[13px] text-[#3B3B3B]"> Tidak Sesuai </span>
+      </div>
+    </div>
+    <div class="flex justify-between">
+      <h1 class="text-[#3B3B3B] mt-10 font-semibold text-lg">
+        Tabel Confusion Matrix
+      </h1>
+      <h1 class="text-[#5842BE] mt-10 font-semibold text-lg">
+        Akurasi Model :
+        <span>90</span>
+        %
+      </h1>
+    </div>
+    <div class="rounded-lg">
+      <table class="w-full mt-2 rounded-full">
+        <thead class="bg-[#5842BE]">
+          <tr>
+            <th
+              scope="col"
+              class="border px-2 py-2 w-1/4 text-sm font-medium text-white text-start"
+            ></th>
+            <th
+              scope="col"
+              class="border px-6 py-2 w-1/4 text-sm font-medium text-white text-start"
+            >
+              Klasifikasi Positif
+            </th>
+            <th
+              scope="col"
+              class="border px-6 py-2 w-1/4 text-sm font-medium text-white text-start"
+            >
+              Klasifikasi Negatif
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="border px-6 py-2 text-sm font-medium text-[#3B3B3B]">
+              Aktual Positif
+            </td>
+            <td class="border px-6 py-2 text-sm font-medium text-[#3B3B3B]">
+              60
+            </td>
+            <td class="border px-6 py-2 text-sm font-medium text-[#3B3B3B]">
+              80
+            </td>
+          </tr>
+          <tr>
+            <td
+              class="border px-6 py-2 text-sm font-medium text-[#3B3B3B] whitespace-nowrap"
+            >
+              Aktual Negatif
+            </td>
+            <td
+              class="border px-6 py-2 text-sm font-medium text-[#3B3B3B] whitespace-nowrap"
+            >
+              20
+            </td>
+            <td
+              class="border px-6 py-2 text-sm font-medium text-[#3B3B3B] whitespace-nowrap"
+            >
+              32
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
+<script>
+  window.addEventListener("load", () => {
+    (function () {
+      buildChart(
+        "#hs-pie-chart-classification",
+        () => ({
+          chart: {
+            width: "50%",
+            type: "pie",
+            zoom: {
+              enabled: false,
+            },
+          },
+          series: [73, 27],
+          labels: ["Positif", "Negatif"],
+          title: {
+            show: false,
+          },
+          dataLabels: {
+            style: {
+              fontSize: "14px",
+              fontFamily: "Poppins, ui-sans-serif",
+              fontWeight: "400",
+              colors: ["#fff", "#fff"],
+            },
+            dropShadow: {
+              enabled: false,
+            },
+            formatter: (value) => `${value.toFixed(0)} %`,
+          },
+          plotOptions: {
+            pie: {
+              dataLabels: {
+                offset: -40,
+              },
+            },
+          },
+          legend: {
+            show: false,
+          },
+          stroke: {
+            width: 4,
+          },
+          tooltip: {
+            enabled: true,
+          },
+          states: {
+            hover: {
+              filter: {
+                type: "none",
+              },
+            },
+          },
+        }),
+        {
+          colors: ["#5842BE", "#8F77FF"],
+          stroke: {
+            colors: ["rgb(255, 255, 255)"],
+          },
+        },
+        {
+          colors: ["#8F77FF", "#5842BE"],
+          stroke: {
+            colors: ["rgb(38, 38, 38)"],
+          },
+        }
+      );
+    })();
+  });
+  window.addEventListener("load", () => {
+    (function () {
+      buildChart(
+        "#hs-pie-chart-model",
+        () => ({
+          chart: {
+            width: "50%",
+            type: "pie",
+            zoom: {
+              enabled: false,
+            },
+          },
+          series: [90, 10],
+          labels: ["Sesuai", "Tidak Sesuai"],
+          title: {
+            show: false,
+          },
+          dataLabels: {
+            style: {
+              fontSize: "14px",
+              fontFamily: "Poppins, ui-sans-serif",
+              fontWeight: "400",
+              colors: ["#fff", "#fff"],
+            },
+            dropShadow: {
+              enabled: false,
+            },
+            formatter: (value) => `${value.toFixed(0)} %`,
+          },
+          plotOptions: {
+            pie: {
+              dataLabels: {
+                offset: -40,
+              },
+            },
+          },
+          legend: {
+            show: false,
+          },
+          stroke: {
+            width: 4,
+          },
+          tooltip: {
+            enabled: true,
+          },
+          states: {
+            hover: {
+              filter: {
+                type: "none",
+              },
+            },
+          },
+        }),
+        {
+          colors: ["#5842BE", "#8F77FF"],
+          stroke: {
+            colors: ["rgb(255, 255, 255)"],
+          },
+        },
+        {
+          colors: ["#8F77FF", "#5842BE"],
+          stroke: {
+            colors: ["rgb(38, 38, 38)"],
+          },
+        }
+      );
+    })();
+  });
+</script>
 {% endblock %}
